--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: keio_tsushin
 
 # Name of the container image (use your-user/app-name on external registries).
-image: keio_tsushin
+image: j0s3phj/keio_tsushin
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - bumplink
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -21,16 +21,15 @@ servers:
 # Don't use this when deploying to multiple web servers (then you have to terminate SSL at your load balancer).
 #
 # proxy:
-#   ssl: true
-#   host: app.example.com
+  ssl: true
+  host: keiotsushin.heyjoseph.me
 
 # Where you keep your container images.
 registry:
   # Alternatives: hub.docker.com / registry.digitalocean.com / ghcr.io / ...
-  server: localhost:5555
 
   # Needed for authenticated registries.
-  # username: your-user
+  username: j0s3phj
 
   # Always use an access token rather than real password when possible.
   # password:
@@ -92,8 +91,8 @@ builder:
   #   - RAILS_MASTER_KEY
 
 # Use a different ssh user than root
-# ssh:
-#   user: app
+ssh:
+  user: thisisjosephju
 
 # Use accessory services (secrets come from .kamal/secrets).
 # accessories:
