--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -20,7 +20,7 @@ servers:
 #
 # Don't use this when deploying to multiple web servers (then you have to terminate SSL at your load balancer).
 #
-# proxy:
+proxy:
   ssl: true
   host: keiotsushin.heyjoseph.me
 
@@ -32,8 +32,8 @@ registry:
   username: j0s3phj
 
   # Always use an access token rather than real password when possible.
-  # password:
-  #   - KAMAL_REGISTRY_PASSWORD
+  password:
+    - KAMAL_REGISTRY_PASSWORD
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
