feat: add local PDF storage and viewer for course references
- Add Documents page for uploading study PDFs (syllabus, reports, handbook)
- PDFs stored in browser IndexedDB (never uploaded to server)
- PDF.js for rendering with page navigation
- Course cards show reference links (e.g., "Syllabus p.45")
- Clicking reference opens Documents page at specific page
- Add Dexie.js for IndexedDB management (via esm.sh CDN)

--- a/config/courses.yml
+++ b/config/courses.yml
@@ -27,6 +27,9 @@ courses:
     category: required
     type: distance
     majors: [all]
+    references:
+      syllabus_page: 45
+      report_page: 12
 
   logic101:
     name: "Logic"
@@ -93,6 +96,9 @@ courses:
     category: elective
     type: distance
     majors: [economics]
+    references:
+      syllabus_page: 78
+      report_page: 34
 
   pol101:
     name: "Political Science"
